# renga-json

./: .gitignore  .pre-commit-config.yaml  README.md  generateJSON.py  generateJSON_test.py  json.json  main.py  main_test.py  pyproject.toml  test_generateJSON.py
.github/workflows/: tests.yml
domain/: Door.py  Geometry.py  Level.py  LevelElevation.py  Point2D.py  Point3D.py  Room.py  Stairway.py
entities/: Point2D.py
