[project]
name = 'renga-json'
version = '0.0.1'
description = 'Renga json'
readme = 'README.md'
requires-python = '>=3.11'

dependencies = [
    'pywin32 == 306',
	'ruff == 0.0.272',
	'pytest == 7.3.2',
	'pyright == 1.1.314',
	'pre-commit == 3.3.3'
]

[tool.ruff]
target-version = 'py311'
ignore = ['E501']

[tool.black]
target-version = ['py311']
line-length = 120

[tool.pyright]
strict = ['**/*.py']